monitoring/CSS: Fix border-spacing of state-table
refs #5543

--- a/modules/monitoring/public/css/tables.less
+++ b/modules/monitoring/public/css/tables.less
@@ -144,7 +144,8 @@
 
 .state-table {
   border-collapse: separate;
-  border-spacing: 1px;
+  border-spacing: 0 1px;
+  width: 100%;
 
   tr[href] {
     &.active {
